lib_LIBRARIES = libemu.a

libemu_a_SOURCES = \
	hsa_arch.h \
	hsa_cmd.h \
	hsa_comm_def.h \
	hsa_cu.c \
	hsa_cu.h \
	hsa_helper.c \
	hsa_helper.h \
	hsa_help_info.c \
	hsa_help_info.h \
	hsa_linkloader.c \
	hsa_linkloader.h \
	m2s-dev.c \
	m2s-dev.h \
	hsa_agent.c \
	hsa_agent.h \
	hsa_prof.c \
	hsa_prof.h \
	opencl.dat \
	topology.c \
	topology.h \
	hsa_vmdep.h \
	hsa_fexcept.h \
	hsa_fexcept.c \
	hsa_deviceEnqueue.h \
	hsa_deviceEnqueue.c 

INCLUDES = @M2S_INCLUDES@

